noindex and robots.txt

--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -10,6 +10,7 @@ time: '0'
 	  <meta charset="{{ site.encoding }}">
       <meta http-equiv="Content-Type" content="text/html;charset={{ site.encoding }}">
 	  <meta http-equiv="refresh" content="{{ page.time }}; url='{{ page.target }}'" />
+	  <meta name="robots" content="noindex">
       <title>{{ layout.title }}</title>
   </head>
   <body>
